--- a/assets/css/parc.css
+++ b/assets/css/parc.css
@@ -1,41 +1,54 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 .parcours .description {
-  border-top: rgba(0, 0, 12, 0.3764705882) solid 2px;
-  border-bottom: rgba(0, 0, 12, 0.3764705882) solid 2px;
-  box-shadow: rgba(0, 0, 12, 0.3764705882) 2px 2px 2px;
+  border-top: #00000c60 solid 2px;
+  border-bottom: #00000c60 solid 2px;
+  -webkit-box-shadow: #00000c60 2px 2px 2px;
+          box-shadow: #00000c60 2px 2px 2px;
   padding: 20px;
   text-align: center;
   color: #00000C;
   font-weight: bold;
   background-color: white;
 }
+
 .parcours a {
-  box-shadow: inset 0 0 0 0 #4c85bd;
+  -webkit-box-shadow: inset 0 0 0 0 #4c85bd;
+          box-shadow: inset 0 0 0 0 #4c85bd;
   color: #4c85bd;
   text-decoration: none;
-  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  -webkit-transition: color .3s ease-in-out, -webkit-box-shadow .3s ease-in-out;
+  transition: color .3s ease-in-out, -webkit-box-shadow .3s ease-in-out;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out, -webkit-box-shadow .3s ease-in-out;
 }
+
 .parcours a:before {
-  content: " ";
+  content: "\0000A0";
 }
+
 .parcours a:after {
-  content: " ";
+  content: "\0000A0";
 }
+
 .parcours a:hover {
-  box-shadow: inset 200px 0 0 0 #4c85bd;
+  -webkit-box-shadow: inset 200px 0 0 0 #4c85bd;
+          box-shadow: inset 200px 0 0 0 #4c85bd;
   color: white;
 }
 
 @media screen and (min-width: 1280px) {
   .parc {
+    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: auto;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
     margin: 15px;
   }
   .parc article {
-    grid-template-columns: 20vw auto;
+    -ms-grid-columns: 20vw auto;
+        grid-template-columns: 20vw auto;
+    display: -ms-grid;
     display: grid;
     grid-gap: 20px;
   }
@@ -54,27 +67,35 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.125);
     position: relative;
+    display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
-    flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
     background-clip: border-box;
-    border-radius: 0.25rem;
+    border-radius: .25rem;
   }
   .parc article div:nth-child(2n) p {
     padding-left: 10px;
     line-height: 150%;
   }
   .parc article div:nth-child(2n) h3 {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding-left: 5px;
   }
 }
+
 @media screen and (max-width: 1280px) {
   .parc {
+    display: -ms-grid;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: auto;
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
     margin: 10px;
   }
   .parc article {
@@ -90,21 +111,27 @@
     background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.125);
     position: relative;
+    display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
-    flex-direction: column;
+    -ms-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
     min-width: 0;
     word-wrap: break-word;
     background-clip: border-box;
-    border-bottom-right-radius: 0.25em;
-    border-bottom-left-radius: 0.25em;
+    border-bottom-right-radius: .25em;
+    border-bottom-left-radius: .25em;
   }
   .parc article div:nth-child(2n) p {
     padding-left: 10px;
     line-height: 150%;
   }
   .parc article div:nth-child(2n) h3 {
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.2em;
     padding-left: 5px;
   }
-}/*# sourceMappingURL=parc.css.map */
+}
+/*# sourceMappingURL=parc.css.map */
