--- a/assets/css/porte-folio.css
+++ b/assets/css/porte-folio.css
@@ -9,43 +9,55 @@ h2 {
 }
 
 .sites {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
   background-color: rgba(0, 0, 12, 0.376);
   padding: 10px;
   margin-bottom: 5px;
 }
+
 .sites article {
-  background-color: rgb(255, 255, 255);
-  border: rgb(0, 0, 12) 1px solid;
-  color: rgb(76, 133, 189);
+  background-color: white;
+  border: #00000c 1px solid;
+  color: #4c85bd;
   width: 500px;
 }
+
 .sites article h4 {
   text-align: center;
-  background-color: rgb(76, 133, 189);
-  color: rgb(255, 255, 255);
+  background-color: #4c85bd;
+  color: white;
   margin: 0;
   font-size: larger;
   font-weight: lighter;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 .sites article p {
-  color: rgb(0, 0, 12);
+  color: #00000c;
   margin: 25px;
 }
+
 .sites article p:nth-child(2n+1) {
   text-align: right;
 }
 
 .sec {
-  background-color: rgb(255, 255, 255);
-  background-color: rgb(255, 255, 255);
+  background-color: white;
+  background-color: white;
   width: 90%;
   margin: auto auto;
   margin-bottom: 5px;
@@ -54,14 +66,15 @@ h2 {
 }
 
 .artstation {
-  background-color: rgb(255, 255, 255);
-  background-color: rgb(255, 255, 255);
+  background-color: white;
+  background-color: white;
   width: 90%;
   margin: auto auto;
   margin-bottom: 5px;
   border-radius: 50px 50px 50px 50px;
   text-align: center;
 }
+
 @media screen and (max-width: 1280px) {
   .artstation img {
     width: 90%;
@@ -69,61 +82,78 @@ h2 {
 }
 
 .Behance {
-  background-color: rgb(255, 255, 255);
-  color: rgb(76, 133, 189);
+  background-color: white;
+  color: #4c85bd;
   text-decoration: none;
   text-align: center;
   display: block;
   padding: 10px;
+  -webkit-transition: all 0.1s;
   transition: all 0.1s;
   font-weight: bold;
 }
+
 .Behance:hover {
   background-color: #0061a7;
   padding-left: 10%;
   font-weight: bold;
-  color: rgb(255, 255, 255);
+  color: white;
 }
+
 .Behance:hover::after {
   content: " >>";
 }
+
 .Behance:active {
   position: relative;
   top: 1px;
 }
 
 .photographies {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 10px;
   background-color: rgba(0, 0, 12, 0.376);
   padding: 10px;
   margin-bottom: 5px;
 }
+
 .photographies article {
   width: 90vw;
-  background-color: rgb(255, 255, 255);
-  border: rgb(0, 0, 12) 1px solid;
+  background-color: white;
+  border: #00000c 1px solid;
 }
+
 .photographies article h4 {
   text-align: center;
-  background-color: rgb(76, 133, 189);
-  color: rgb(255, 255, 255);
+  background-color: #4c85bd;
+  color: white;
   margin: 0;
   padding: 10px;
   font-size: larger;
   font-weight: lighter;
   text-transform: uppercase;
   letter-spacing: 5px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 .photographies article img {
   width: 100%;
 }
+
 .photographies article .projet {
-  box-shadow: inset 0px 1px 0px 0px #54a3f7;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #54a3f7;
+          box-shadow: inset 0px 1px 0px 0px #54a3f7;
   background-color: #007dc1;
   border-radius: 3px 3px 0 0;
   border: 1px solid #124d77;
@@ -135,152 +165,189 @@ h2 {
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #154682;
+  -webkit-transition: all 0.1s;
   transition: all 0.1s;
 }
+
 .photographies article .projet:hover {
   background-color: #0061a7;
   padding-left: 10%;
 }
+
 .photographies article .projet:active {
   position: relative;
   top: 1px;
 }
+
 .photographies article p {
-  color: rgb(0, 0, 12);
+  color: #00000c;
   padding: 10px;
 }
+
 .photographies article p a {
-  color: rgb(76, 133, 189);
+  color: #4c85bd;
   text-decoration: none;
 }
 
 .gmaps {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   width: 90%;
   margin: auto auto;
   margin-bottom: 5px;
   border-radius: 50px 50px 50px 50px;
   text-align: center;
 }
+
 .gmaps img {
   width: 70px;
 }
+
 .gmaps h3 {
-  color: rgb(0, 0, 12);
+  color: #00000c;
 }
+
 .gmaps p {
-  color: rgb(76, 133, 189);
+  color: #4c85bd;
   text-align: center;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 .gmaps .progress_bar {
   width: 100%;
   background-color: rgba(0, 0, 12, 0.376);
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 .gmaps .progress_bar label {
   font-size: larger;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
+
 .gmaps .progress_bar label kbd {
-  color: rgb(0, 0, 12);
+  color: #00000c;
   font-weight: bold;
 }
+
 .gmaps .progress_bar progress[value] {
   width: 100%;
   height: 25px;
-  accent-color: rgb(76, 133, 189);
+  accent-color: #4c85bd;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-bottom: 10px;
 }
+
 .gmaps .progress_bar progress[value]::-webkit-progress-bar {
   background-color: whiteSmoke;
   border-radius: 3px;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5) inset;
-  border: rgba(255, 255, 255, 0) 0px solid;
+  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5) inset;
+          box-shadow: 0 2px 3px rgba(0, 0, 0, 0.5) inset;
+  border: #ffffff00 0px solid;
   z-index: 0;
 }
+
 .gmaps .progress_bar progress[value]::-webkit-progress-value {
   position: relative;
-  background-color: rgb(76, 133, 189);
-  box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.75);
+  background-color: #4c85bd;
+  -webkit-box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: inset 0px -2px 0px 0px rgba(0, 0, 0, 0.75);
   z-index: 99;
 }
+
 .gmaps .progress_bar progress[value] div {
-  background-color: rgb(76, 133, 189);
-  flex-grow: 2;
+  background-color: #4c85bd;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 
 .LinkedIn {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   width: 90%;
   margin: auto auto;
   margin-bottom: 5px;
   border-radius: 50px 50px 50px 50px;
   text-align: center;
 }
+
 .LinkedIn img {
   width: 70px;
   border-radius: 100%;
 }
+
 .LinkedIn h3 {
-  color: rgb(0, 0, 12);
+  color: #00000c;
 }
+
 .LinkedIn p {
-  color: rgb(76, 133, 189);
+  color: #4c85bd;
   text-align: center;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .BehanceProfil {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   width: 90%;
   margin: auto auto;
   margin-bottom: 5px;
   border-radius: 50px 50px 50px 50px;
   text-align: center;
 }
+
 .BehanceProfil img {
   width: 70px;
   border-radius: 100%;
 }
+
 .BehanceProfil h3 {
-  color: rgb(0, 0, 12);
+  color: #00000c;
 }
+
 .BehanceProfil p {
-  color: rgb(76, 133, 189);
+  color: #4c85bd;
   text-align: center;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 .YouTubeChaine {
-  background-color: rgb(255, 255, 255) !important;
+  background-color: white !important;
   width: 90%;
   margin: auto auto !important;
   margin-bottom: 5px;
   border-radius: 50px 50px 50px 50px;
   text-align: center !important;
 }
+
 .YouTubeChaine img {
   width: 70px;
   border-radius: 100%;
 }
+
 .YouTubeChaine h3 {
-  color: rgb(0, 0, 12);
+  color: #00000c;
 }
+
 .YouTubeChaine p {
-  color: rgb(76, 133, 189);
+  color: #4c85bd;
   text-align: center;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 a.lien {
-  box-shadow: inset 0px 1px 0px 0px #54a3f7;
+  -webkit-box-shadow: inset 0px 1px 0px 0px #54a3f7;
+          box-shadow: inset 0px 1px 0px 0px #54a3f7;
   background-color: #007dc1;
   border-radius: 3px 3px 0 0;
   border: 1px solid #124d77;
@@ -291,27 +358,34 @@ a.lien {
   font-size: 13px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #154682;
+  -webkit-transition: all 0.1s;
   transition: all 0.1s;
 }
+
 @media (orientation: landscape) {
   a.lien {
     padding: 6px 24px;
   }
 }
+
 @media (orientation: portrait) {
   a.lien {
     padding: 20px 24px;
     font-size: larger;
   }
 }
+
 a.lien:hover {
   background-color: #0061a7;
   padding-left: 10%;
 }
+
 a.lien:hover::after {
   content: " >>";
 }
+
 a.lien:active {
   position: relative;
   top: 1px;
-}/*# sourceMappingURL=porte-folio.css.map */
+}
+/*# sourceMappingURL=porte-folio.css.map */
