--- a/assets/cv/CV_CSS/OdSw.css
+++ b/assets/cv/CV_CSS/OdSw.css
@@ -1,44 +1,53 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 h1, h2, h3 {
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 main {
   font-size: 1.1em;
+  display: -ms-grid;
   display: grid;
   justify-items: center;
-  align-items: baseline;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
+
 @media screen and (orientation: landscape) {
   main {
-    grid-template-columns: 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
   main section {
     width: 75%;
   }
 }
+
 @media screen and (orientation: portrait) {
   main {
-    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
   main section {
     width: 90%;
     margin-bottom: 10px;
   }
 }
+
 main h1 {
   text-align: left;
   text-transform: uppercase;
   font-size: 50px;
   margin: 0;
 }
+
 main h2 {
   text-align: right;
   font-weight: lighter;
   font-size: 20px;
   margin: 0;
 }
+
 main h3 {
   text-align: center;
   font-size: larger;
@@ -47,22 +56,27 @@ main h3 {
   color: #00000C;
   padding: 2px;
   margin: 0;
-  border-radius: 10px 100px/120px;
+  border-radius: 10px 100px / 120px;
 }
+
 main .slogan {
   text-align: center;
   padding: 10px;
 }
+
 main ul {
   list-style: none;
   padding: 0;
 }
+
 main ul li {
   padding-top: 5px;
 }
+
 main ul li:nth-child(2n+1) {
   background-color: rgba(0, 0, 0, 0.11);
 }
+
 main ul li a {
   color: white;
   text-decoration: none;
@@ -71,14 +85,17 @@ main ul li a {
 .Coordonnees {
   text-align: center;
 }
+
 .Coordonnees li > a:link {
   color: #4c85bd;
   text-decoration: underline;
   text-align: center;
 }
+
 .Coordonnees li > a:link:hover {
   color: #ffffff;
 }
+
 .Coordonnees p {
   background-color: rgba(255, 0, 0, 0.493);
   text-align: center;
@@ -88,12 +105,16 @@ main ul li a {
 section {
   font-weight: bold;
 }
+
 section:nth-child(n+3) {
-  background-color: rgb(192, 192, 192);
+  background-color: silver;
 }
+
 section ul {
   padding: 10px;
 }
+
 section ul li:before {
-  content: "  ";
-}/*# sourceMappingURL=OdSw.css.map */
+  content: "\0000A0 \0000A0";
+}
+/*# sourceMappingURL=OdSw.css.map */
