--- a/assets/cv/timeline/timeline.css
+++ b/assets/cv/timeline/timeline.css
@@ -4,6 +4,7 @@
   color: black;
   margin: auto;
 }
+
 .timeline p {
   border-top: 2px dashed;
   border-color: #4c85bd !important;
@@ -12,6 +13,7 @@
   counter-increment: section;
   position: relative;
 }
+
 .timeline p:nth-child(even):before {
   content: " ";
   right: 100%;
@@ -26,6 +28,7 @@
   color: white;
   font-size: 110%;
 }
+
 .timeline p:nth-child(odd):before {
   content: " ";
   left: 100%;
@@ -40,6 +43,7 @@
   color: white;
   font-size: 110%;
 }
+
 .timeline p:nth-child(even) {
   border-left: 2px dashed;
   border-top-left-radius: 30px;
@@ -48,6 +52,7 @@
   padding-right: 0;
   text-align: left;
 }
+
 .timeline p:nth-child(odd) {
   border-right: 2px dashed;
   border-top-right-radius: 30px;
@@ -56,11 +61,13 @@
   padding-left: 0;
   text-align: right;
 }
+
 .timeline p:first-child {
   border-top: 0;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
+
 .timeline p:last-child {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
@@ -71,15 +78,20 @@
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
 }
+
 .stage::after {
   content: " ";
 }
+
 .stage span {
-  writing-mode: vertical-rl;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
   position: absolute;
   right: 1vw;
   top: 0;
   font-weight: bold;
   text-align: center;
   height: 100%;
-}/*# sourceMappingURL=timeline.css.map */
+}
+/*# sourceMappingURL=timeline.css.map */
